# jet_brains_counter

./: .gitignore  CMakeLists.txt  README.md  counter.h  proof.md  run_genmc.sh  test.c
